<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="4dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_margin="4dp"
        android:text="@string/create_account" />

    <Button
        android:id="@+id/list_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account"
        android:layout_margin="4dp"
        android:text="@string/list_users" />

    <Button
        android:id="@+id/delete_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_users"
        android:layout_margin="4dp"
        android:text="@string/delete_user" />

</RelativeLayout>