<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="4dp"
        android:id="@+id/username_edittext_create_account"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="4dp"
        android:layout_below="@id/username_edittext_create_account"
        android:id="@+id/password_edit_text_create_account"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button_create_account_activity"
        android:layout_below="@id/password_edit_text_create_account"
        android:text="@string/create_account"
        android:layout_margin="4dp"/>

</RelativeLayout>